skims\feat(back): #3530.7 add missing egress
- update tests


Former-commit-id: 5f250e015cd63c9480d50dc47b9618848cbbe53d

--- a/skims/test/data/lib_path/f047_aws/cnf_unrestricted_cidrs.yaml
+++ b/skims/test/data/lib_path/f047_aws/cnf_unrestricted_cidrs.yaml
@@ -7,6 +7,11 @@ Resources:
           FromPort: 443
           IpProtocol: tcp
           ToPort: 443
+      SecurityGroupEgress:
+        - CidrIp: 34.229.161.227/16
+          FromPort: 8080
+          IpProtocol: "tcp"
+          ToPort: 8080
     Type: AWS::EC2::SecurityGroup
   securityGroup2:
     Properties:
