--- a/skims/test/data/lib_path/f047_aws/cnf_unrestricted_ports.yaml
+++ b/skims/test/data/lib_path/f047_aws/cnf_unrestricted_ports.yaml
@@ -7,6 +7,11 @@ Resources:
           FromPort: 1
           IpProtocol: tcp
           ToPort: 65535
+      SecurityGroupEgress:
+        - CidrIp: 34.229.161.227/16
+          FromPort: 8080
+          IpProtocol: "tcp"
+          ToPort: 8080
     Type: AWS::EC2::SecurityGroup
   securityGroup2:
     Properties:
