integrates\feat(build): #3504.17 probes timeout
- Increase probes timeout to 30 seconds


Former-commit-id: 68ef1e92a23e40e3c95923c6649ce1f87379261c

--- a/integrates/deploy/ephemeral/deployment.yaml
+++ b/integrates/deploy/ephemeral/deployment.yaml
@@ -43,6 +43,7 @@ spec:
             periodSeconds: 30
             successThreshold: 1
             failureThreshold: 40
+            timeoutSeconds: 30
           livenessProbe:
             exec:
               command: [./build.sh, integrates_probes_ephemeral_liveness]
@@ -50,3 +51,4 @@ spec:
             periodSeconds: 30
             successThreshold: 1
             failureThreshold: 40
+            timeoutSeconds: 30
