--- a/integrates/deploy/production/deployment2.yaml
+++ b/integrates/deploy/production/deployment2.yaml
@@ -47,6 +47,7 @@ spec:
           periodSeconds: 30
           successThreshold: 1
           failureThreshold: 40
+          timeoutSeconds: 30
         livenessProbe:
           exec:
             command: [bash, deploy/production/integrates2-probes.sh, run_liveness_probe]
@@ -54,3 +55,4 @@ spec:
           periodSeconds: 30
           successThreshold: 1
           failureThreshold: 40
+          timeoutSeconds: 30
