--- a/integrates/deploy/production/deployment.yaml
+++ b/integrates/deploy/production/deployment.yaml
@@ -51,6 +51,7 @@ spec:
           periodSeconds: 30
           successThreshold: 1
           failureThreshold: 40
+          timeoutSeconds: 30
         livenessProbe:
           exec:
             command: [bash, deploy/production/integrates-probes.sh, run_liveness_probe]
@@ -58,3 +59,4 @@ spec:
           periodSeconds: 30
           successThreshold: 1
           failureThreshold: 40
+          timeoutSeconds: 30
