--- a/integrates/deploy/production/variables.yaml
+++ b/integrates/deploy/production/variables.yaml
@@ -5,5 +5,8 @@ metadata:
   namespace: production
 type: Opaque
 data:
-  AWS_ACCESS_KEY_ID: __B64_AWS_ACCESS_KEY_ID__
-  AWS_SECRET_ACCESS_KEY: __B64_AWS_SECRET_ACCESS_KEY__
+  INTEGRATES_PROD_AWS_ACCESS_KEY_ID: __B64_INTEGRATES_PROD_AWS_ACCESS_KEY_ID__
+  INTEGRATES_PROD_AWS_SECRET_ACCESS_KEY: __B64_INTEGRATES_PROD_AWS_SECRET_ACCESS_KEY__
+  CI_COMMIT_REF_NAME: __B64_CI_COMMIT_REF_NAME__
+  CI_REGISTRY_USER: ''
+  CI_REGISTRY_PASSWORD: ''
