integrates\refac(build): #3504.21 remove unnecessary code
- Remove all unused files, jobs and provisioners
- no-deltas-test


Former-commit-id: e073387162be8803882f1430693a430b32841e30

--- a/integrates/deploy/ephemeral/deployment.yaml
+++ b/integrates/deploy/ephemeral/deployment.yaml
@@ -17,7 +17,7 @@ spec:
         worker_group: large
       containers:
         - name: integrates
-          image: registry.gitlab.com/fluidattacks/product/app:__DEPLOYMENT_NAME___new
+          image: registry.gitlab.com/fluidattacks/product/app:__DEPLOYMENT_NAME__
           imagePullPolicy: Always
           command: ["bash"]
           args: ["build.sh", "integrates_serve_ephemeral"]
