--- a/integrates/deploy/production/deployment2.yaml
+++ b/integrates/deploy/production/deployment2.yaml
@@ -19,7 +19,7 @@ spec:
         worker_group: xlarge
       containers:
         - name: integrates2
-          image: registry.gitlab.com/fluidattacks/product/app:master_new
+          image: registry.gitlab.com/fluidattacks/product/app:master
           imagePullPolicy: Always
           command: ["bash"]
           args: ["build.sh", "integrates2_serve_production"]
