--- a/integrates/deploy/ephemeral/deployment2.yaml
+++ b/integrates/deploy/ephemeral/deployment2.yaml
@@ -17,7 +17,7 @@ spec:
         worker_group: large
       containers:
         - name: integrates2
-          image: registry.gitlab.com/fluidattacks/product/app:__DEPLOYMENT_NAME___new
+          image: registry.gitlab.com/fluidattacks/product/app:__DEPLOYMENT_NAME__
           imagePullPolicy: Always
           command: ["bash"]
           args: ["build.sh", "integrates2_serve_ephemeral"]
