--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,6 +32,16 @@ workflow:
   rules:
     - when: always
 
+.with_nix: &with_nix
+  tags: [autoscaling]
+  image: "${CI_REGISTRY_IMAGE}/nix:${CI_JOB_NAME}"
+  needs: []
+  script:
+    - ./build.sh "${CI_JOB_NAME% *}"
+  interruptible: true
+  variables:
+    GIT_DEPTH: 5
+
 .common_in_mrs: &common_in_mrs
   rules:
     - if: '$CI_PIPELINE_SOURCE != "merge_request_event"'
@@ -69,14 +79,6 @@ workflow:
     - if: '$CI_PIPELINE_SOURCE == "trigger"'
       when: never
     - when: always
-
-.with_nix: &with_nix
-  tags: [autoscaling]
-  image: "${CI_REGISTRY_IMAGE}/nix:${CI_JOB_NAME}"
-  needs: []
-  script:
-    - ./build.sh "${CI_JOB_NAME% *}"
-  interruptible: true
 
 common_build_nix_caches:
   <<: *with_nix
@@ -140,13 +142,12 @@ common_forces:
     - forces --token "${FORCES_API_TOKEN}" --strict -vv
   interruptible: true
   allow_failure: true
+  variables:
+    GIT_DEPTH: 5
 
 common_sonarcloud_check:
   <<: *common_in_dev_and_master_branch
   interruptible: true
-  variables:
-    SONAR_USER_HOME: "${CI_PROJECT_DIR}/.sonar"  # Defines the location of the analysis task cache
-    GIT_DEPTH: "0"  # Tells git to fetch all the branches of the project, required by the analysis task
   stage: external
   tags: [autoscaling]
   needs: []
@@ -159,3 +160,6 @@ common_sonarcloud_check:
       - .sonar/cache
   script:
     - sonar-scanner
+  variables:
+    SONAR_USER_HOME: "${CI_PROJECT_DIR}/.sonar"  # Defines the location of the analysis task cache
+    GIT_DEPTH: "0"  # Tells git to fetch all the branches of the project, required by the analysis task
