--- a/serves/.gitlab-ci.yml
+++ b/serves/.gitlab-ci.yml
@@ -5,6 +5,8 @@
   script:
     - ./build.sh "${CI_JOB_NAME% *}"
   interruptible: true
+  variables:
+    GIT_DEPTH: 5
 
 .serves_commit_pattern: &serves_commit_pattern '$CI_COMMIT_TITLE =~ /^(all|serves)/'
 
