--- a/airs/.gitlab-ci.yml
+++ b/airs/.gitlab-ci.yml
@@ -5,6 +5,8 @@
   script:
     - ./build.sh "${CI_JOB_NAME% *}"
   interruptible: true
+  variables:
+    GIT_DEPTH: 5
 
 .airs_commit_pattern: &airs_commit_pattern '$CI_COMMIT_TITLE =~ /^(all|airs)/'
 
