--- a/melts/.gitlab-ci.yml
+++ b/melts/.gitlab-ci.yml
@@ -5,6 +5,8 @@
   script:
     - ./build.sh "${CI_JOB_NAME% *}"
   interruptible: true
+  variables:
+    GIT_DEPTH: 5
 
 .melts_commit_pattern: &melts_commit_pattern '$CI_COMMIT_TITLE =~ /^(all|melts)/'
 
