--- a/reviews/.gitlab-ci.yml
+++ b/reviews/.gitlab-ci.yml
@@ -5,6 +5,8 @@
   script:
     - ./build.sh "${CI_JOB_NAME% *}"
   interruptible: true
+  variables:
+    GIT_DEPTH: 5
 
 .reviews_commit_pattern: &reviews_commit_pattern '$CI_COMMIT_TITLE =~ /^(all|reviews)/'
 
