skims\feat(back): #3530.10 add terraform s3
Former-commit-id: 27fef45ac1bab3a8c746fe605fe0ba45d1930540

--- a/skims/test/data/lib_path/f055_aws/cfn_public_buckets.yaml
+++ b/skims/test/data/lib_path/f055_aws/cfn_public_buckets.yaml
@@ -13,7 +13,7 @@ Resources:
   S3Bucket1:
     Type: AWS::S3::Bucket
     Properties:
-      AccessControl: PublicRead
+      AccessControl: PublicReadWrite
       BucketName: SKIMS-PUBLIC-BUCKET-2
       BucketEncryption:
         ServerSideEncryptionConfiguration:
