--- a/skims/.gitlab-ci.yml
+++ b/skims/.gitlab-ci.yml
@@ -5,6 +5,8 @@
   script:
     - ./build.sh "${CI_JOB_NAME% *}"
   interruptible: true
+  variables:
+    GIT_DEPTH: 5
 
 .skims_commit_pattern: &skims_commit_pattern '$CI_COMMIT_TITLE =~ /^(all|skims)/'
 
