--- a/sorts/.gitlab-ci.yml
+++ b/sorts/.gitlab-ci.yml
@@ -5,6 +5,8 @@
   script:
     - ./build.sh "${CI_JOB_NAME% *}"
   interruptible: true
+  variables:
+    GIT_DEPTH: 5
 
 .sorts_commit_pattern: &sorts_commit_pattern '$CI_COMMIT_TITLE =~ /^(all|sorts)/'
 
