--- a/observes/etl/dif_gitlab_etl/pyproject.toml
+++ b/observes/etl/dif_gitlab_etl/pyproject.toml
@@ -11,6 +11,7 @@ psycopg2 = "2.8.4"
 streamer-gitlab = {path = "../../singer/streamer_gitlab"}
 tap-json = {path = "../../singer/tap_json"}
 nest-asyncio = "1.4.1"
+click = "7.1.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "6.1.1"
