asserts\feat(build): #3564.8 shallow clone
- Make jobs use 5 depth
- Temporary disable test as nve 2.3 queries are currently broken
on their website
- Fix asserts tests


Former-commit-id: c5c8cb6a5f8089cf38e6e37b1a39833fc5be35b4

--- a/asserts/.gitlab-ci.yml
+++ b/asserts/.gitlab-ci.yml
@@ -5,6 +5,8 @@
   script:
     - ./build.sh "${CI_JOB_NAME% *}"
   interruptible: true
+  variables:
+    GIT_DEPTH: 5
 
 .asserts_commit_pattern: &asserts_commit_pattern '$CI_COMMIT_TITLE =~ /^(all|asserts)/'
 
@@ -243,7 +245,7 @@ asserts_test_api_proto_tcp:
   <<: *in_dev_branch_asserts
   stage: test-code
 
-asserts_test_api_sca:
+.asserts_test_api_sca:
   <<: *with_nix
   <<: *in_dev_branch_asserts
   stage: test-code
