integrates\feat(front): #3549.1 add commit
- Add commit short variable to public vars
- Pass env to front build
- Call variables from sidevar
- Add extra english translations
- Turn on EnvironmentPlugin for accessing required envars


Former-commit-id: 687840891c4e00878de3c5530928702ba07c7f3b

--- a/.envrc.public
+++ b/.envrc.public
@@ -6,6 +6,7 @@ export CI_COMMIT_AUTHOR
 export CI_COMMIT_BEFORE_SHA
 export CI_COMMIT_REF_NAME
 export CI_COMMIT_SHA
+export CI_COMMIT_SHORT_SHA
 export CI_NODE_INDEX
 export CI_NODE_TOTAL
 export CHANGELOG
@@ -37,6 +38,8 @@ test -n "${CI_COMMIT_REF_SLUG:-}" \
   || CI_COMMIT_REF_SLUG="${CI_COMMIT_REF_NAME}"
 test -n "${CI_COMMIT_SHA:-}" \
   || CI_COMMIT_SHA=$(git log -n 1 --format=%H HEAD)
+test -n "${CI_COMMIT_SHORT_SHA:-}" \
+  || CI_COMMIT_SHORT_SHA=$(git rev-parse --short HEAD)
 test -n "${CI_NODE_INDEX:-}" \
   || CI_NODE_INDEX='1'
 test -n "${CI_NODE_TOTAL:-}" \
