skims\feat(back): #3576.1 run on aws
Former-commit-id: adf63feb18b2231df177e14f75cfe489ee76a083

--- a/skims/.gitlab-ci.yml
+++ b/skims/.gitlab-ci.yml
@@ -97,3 +97,14 @@ skims_documentation:
   <<: *with_nix
   <<: *skims_in_master_branch
   stage: deploy-app
+
+skims_process_group_on_aws:
+  <<: *with_nix
+  rules:
+    - if: '$CI_PIPELINE_SOURCE != "trigger"'
+      when: never
+    - if: '$CI_COMMIT_BRANCH != "master"'
+      when: never
+    - if: '$SKIMS_GROUP_TO_PROCESS_ON_AWS != null'
+  tags: [autoscaling]
+  stage: scheduler
