--- a/sorts/pyproject.toml
+++ b/sorts/pyproject.toml
@@ -46,7 +46,7 @@ PyDriller = "1.15.2"
 python = "^3.8"
 pytz = "2020.1"
 requests = "2.24.0"
-scikit-learn = "0.23.2"
+scikit-learn = "0.22.2.post1"
 setuptools = "50.3.2"
 tqdm = "4.50.2"
 
