integrates\refac(back): #3549.2 remove initial delay
- Make initialDelaySeconds 0 in order to speed up
pod initialization
- Increase memory for integrates2 ephemerals


Former-commit-id: d65ffbbc891c205d0c2736c69f1c346813f5a67a

--- a/integrates/deploy/ephemeral/deployment2.yaml
+++ b/integrates/deploy/ephemeral/deployment2.yaml
@@ -19,15 +19,15 @@ spec:
         - name: integrates2
           image: registry.gitlab.com/fluidattacks/product/app:__DEPLOYMENT_NAME__
           imagePullPolicy: Always
-          command: ["bash"]
-          args: ["build.sh", "integrates2_serve_ephemeral"]
+          command: [bash]
+          args: [build.sh, integrates2_serve_ephemeral]
           resources:
             requests:
               cpu: 500m
-              memory: 1Gi
+              memory: 2Gi
             limits:
               cpu: 500m
-              memory: 1Gi
+              memory: 2Gi
           env:
             - name: DEPLOYMENT_DATE
               value: "__DATE__"
@@ -38,16 +38,16 @@ spec:
             - containerPort: 8000
           readinessProbe:
             exec:
-              command: [./build.sh, integrates2_probes_ephemeral_readiness]
-            initialDelaySeconds: 60
+              command: [bash, build.sh, integrates2_probes_ephemeral_readiness]
+            initialDelaySeconds: 0
             periodSeconds: 30
             successThreshold: 1
             failureThreshold: 40
             timeoutSeconds: 30
           livenessProbe:
             exec:
-              command: [./build.sh, integrates2_probes_ephemeral_liveness]
-            initialDelaySeconds: 60
+              command: [bash, build.sh, integrates2_probes_ephemeral_liveness]
+            initialDelaySeconds: 0
             periodSeconds: 30
             successThreshold: 1
             failureThreshold: 40
