--- a/integrates/deploy/ephemeral/deployment.yaml
+++ b/integrates/deploy/ephemeral/deployment.yaml
@@ -19,8 +19,8 @@ spec:
         - name: integrates
           image: registry.gitlab.com/fluidattacks/product/app:__DEPLOYMENT_NAME__
           imagePullPolicy: Always
-          command: ["bash"]
-          args: ["build.sh", "integrates_serve_ephemeral"]
+          command: [bash]
+          args: [build.sh, integrates_serve_ephemeral]
           resources:
             requests:
               cpu: 500m
@@ -38,16 +38,16 @@ spec:
             - containerPort: 8000
           readinessProbe:
             exec:
-              command: [./build.sh, integrates_probes_ephemeral_readiness]
-            initialDelaySeconds: 60
+              command: [bash, build.sh, integrates_probes_ephemeral_readiness]
+            initialDelaySeconds: 0
             periodSeconds: 30
             successThreshold: 1
             failureThreshold: 40
             timeoutSeconds: 30
           livenessProbe:
             exec:
-              command: [./build.sh, integrates_probes_ephemeral_liveness]
-            initialDelaySeconds: 60
+              command: [bash, build.sh, integrates_probes_ephemeral_liveness]
+            initialDelaySeconds: 0
             periodSeconds: 30
             successThreshold: 1
             failureThreshold: 40
