--- a/integrates/deploy/production/deployment2.yaml
+++ b/integrates/deploy/production/deployment2.yaml
@@ -21,8 +21,8 @@ spec:
         - name: integrates2
           image: registry.gitlab.com/fluidattacks/product/app:master
           imagePullPolicy: Always
-          command: ["bash"]
-          args: ["build.sh", "integrates2_serve_production"]
+          command: [bash]
+          args: [build.sh, integrates2_serve_production]
           resources:
             requests:
               cpu: 1500m
@@ -44,16 +44,16 @@ spec:
             - containerPort: 8000
           readinessProbe:
             exec:
-              command: [./build.sh, integrates2_probes_production_readiness]
-            initialDelaySeconds: 60
+              command: [bash, build.sh, integrates2_probes_production_readiness]
+            initialDelaySeconds: 0
             periodSeconds: 30
             successThreshold: 1
             failureThreshold: 40
             timeoutSeconds: 30
           livenessProbe:
             exec:
-              command: [./build.sh, integrates2_probes_production_liveness]
-            initialDelaySeconds: 60
+              command: [bash, build.sh, integrates2_probes_production_liveness]
+            initialDelaySeconds: 0
             periodSeconds: 30
             successThreshold: 1
             failureThreshold: 40
