--- a/observes/etl/dif_gitlab_etl/pyproject.toml
+++ b/observes/etl/dif_gitlab_etl/pyproject.toml
@@ -17,6 +17,8 @@ click = "7.1.2"
 pytest = "6.1.1"
 pytest-timeout = "1.4.2"
 pytest-asyncio = "0.14.0"
+pylint = "2.6.0"
+mypy = "0.790"
 
 [build-system]
 requires = ["poetry>=0.12"]
