--- a/sorts/pyproject.toml
+++ b/sorts/pyproject.toml
@@ -33,6 +33,7 @@ repository = "https://gitlab.com/fluidattacks/product/-/tree/master/sorts"
 version = "1.0.0"
 
 [tool.poetry.dependencies]
+bugsnag = "3.9.0"
 click = "7.1.2"
 GitPython = "3.1.9"
 gql = "3.0.0a2"
