integrates\feat(front): #3549.6 login screen version
- Add version to login screen
- Add deployment date to login screen
- Move extra jobs only to dev pipeline


Former-commit-id: e431fdf19a4f2920c4d7bc25a8a302a327c92fca

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -100,7 +100,7 @@ common_deploy_container_image:
 
 common_lint_build_system:
   <<: *with_nix
-  <<: *common_in_dev_and_master_branch
+  <<: *common_in_dev_branch
   stage: lint-code
 
 common_lint_commit_msg:
