--- a/serves/services/autoscaling-ci/config.toml
+++ b/serves/services/autoscaling-ci/config.toml
@@ -50,6 +50,7 @@ check_interval = 20
       "amazonec2-subnet-id=subnet-0bceb7aa2c900324a",
       "amazonec2-zone=a",
       "amazonec2-use-private-address=true",
+      "amazonec2-use-ebs-optimized-instance=true",
       "amazonec2-security-group=AutoscalingCISG",
       "amazonec2-ami=ami-013da1cc4ae87618c",
       "amazonec2-instance-type=t4g.medium",
@@ -171,6 +172,7 @@ check_interval = 20
       "amazonec2-subnet-id=subnet-0bceb7aa2c900324a",
       "amazonec2-zone=a",
       "amazonec2-use-private-address=true",
+      "amazonec2-use-ebs-optimized-instance=true",
       "amazonec2-security-group=AutoscalingCISG",
       "amazonec2-ami=ami-013da1cc4ae87618c",
       "amazonec2-instance-type=t4g.medium",
@@ -224,6 +226,7 @@ check_interval = 20
       "amazonec2-subnet-id=subnet-0bceb7aa2c900324a",
       "amazonec2-zone=a",
       "amazonec2-use-private-address=true",
+      "amazonec2-use-ebs-optimized-instance=true",
       "amazonec2-security-group=AutoscalingCISG",
       "amazonec2-ami=ami-013da1cc4ae87618c",
       "amazonec2-instance-type=t4g.medium",
