integrates\feat(front): #3549.10 mobile new version
- Use new versioning in about component
- Add translations


Former-commit-id: 9da84a5e7ce527f708066b32f2768a2727568d61

--- a/integrates/mobile/app.json
+++ b/integrates/mobile/app.json
@@ -20,7 +20,10 @@
     "extra": {
       "bugsnag": {
         "apiKey": "c7b947a293ced0235cdd8edc8c09dad4"
-      }
+      },
+      "commitSha": "__CI_COMMIT_SHA__",
+      "commitShaShort": "__CI_COMMIT_SHORT_SHA__",
+      "deploymentDate": "__INTEGRATES_DEPLOYMENT_DATE__"
     },
     "hooks": {
       "postPublish": [
@@ -64,6 +67,6 @@
       "enabled": true
     },
     "userInterfaceStyle": "automatic",
-    "version": "integrates_version"
+    "version": "__CI_COMMIT_SHORT_SHA__"
   }
 }
