--- a/integrates/deploy/ephemeral/ingress.yaml
+++ b/integrates/deploy/ephemeral/ingress.yaml
@@ -24,7 +24,11 @@ spec:
           - path: /*
             backend:
               serviceName: ssl-redirect
-              servicePort: use-annotation          
+              servicePort: use-annotation
+          - path: /new/orgs/*
+            backend:
+              serviceName: integrates-__DEPLOYMENT_NAME__
+              servicePort: 80
           - path: /new/*
             backend:
               serviceName: integrates2-__DEPLOYMENT_NAME__
