--- a/integrates/deploy/production/ingress.yaml
+++ b/integrates/deploy/production/ingress.yaml
@@ -25,6 +25,10 @@ spec:
             backend:
               serviceName: ssl-redirect
               servicePort: use-annotation
+          - path: /new/orgs/*
+            backend:
+              serviceName: integrates-master
+              servicePort: 80
           - path: /new/*
             backend:
               serviceName: integrates2-master
