integrates\feat(back): #3621.1 unify deployments
- Unify ephemeral deployments for integrates 1 and 2
- Change ports for integrates2 so they both can
coexist within the same pod
- Adapt ingress and service
- Temporarily remove dynamo and redis local helpers
from integrates2_serve_ephemeral as they're already
being created by integrates_serve_ephemeral


Former-commit-id: 5176120b6aeb23d897751431e2adea4c040d9ec1

--- a/integrates/deploy/ephemeral/service.yaml
+++ b/integrates/deploy/ephemeral/service.yaml
@@ -6,8 +6,13 @@ metadata:
 spec:
   type: NodePort
   ports:
-    - port: 80
+    - name: integrates1
+      port: 80
       targetPort: 8000
+      protocol: TCP
+    - name: integrates2
+      port: 81
+      targetPort: 8001
       protocol: TCP
   selector:
     app: integrates-__DEPLOYMENT_NAME__
