--- a/integrates/deploy/ephemeral/deployment.yaml
+++ b/integrates/deploy/ephemeral/deployment.yaml
@@ -16,7 +16,7 @@ spec:
       nodeSelector:
         worker_group: large
       containers:
-        - name: integrates
+        - name: integrates1
           image: registry.gitlab.com/fluidattacks/product/app:__DEPLOYMENT_NAME__
           imagePullPolicy: Always
           command: [bash]
@@ -47,6 +47,42 @@ spec:
           livenessProbe:
             exec:
               command: [bash, build.sh, integrates_probes_ephemeral_liveness]
+            initialDelaySeconds: 0
+            periodSeconds: 30
+            successThreshold: 1
+            failureThreshold: 40
+            timeoutSeconds: 30
+        - name: integrates2
+          image: registry.gitlab.com/fluidattacks/product/app:__DEPLOYMENT_NAME__
+          imagePullPolicy: Always
+          command: [bash]
+          args: [build.sh, integrates2_serve_ephemeral]
+          resources:
+            requests:
+              cpu: 500m
+              memory: 2Gi
+            limits:
+              cpu: 500m
+              memory: 2Gi
+          env:
+            - name: DEPLOYMENT_DATE
+              value: "__DATE__"
+          envFrom:
+            - secretRef:
+                name: integrates-__DEPLOYMENT_NAME__
+          ports:
+            - containerPort: 8001
+          readinessProbe:
+            exec:
+              command: [bash, build.sh, integrates2_probes_ephemeral_readiness]
+            initialDelaySeconds: 0
+            periodSeconds: 30
+            successThreshold: 1
+            failureThreshold: 40
+            timeoutSeconds: 30
+          livenessProbe:
+            exec:
+              command: [bash, build.sh, integrates2_probes_ephemeral_liveness]
             initialDelaySeconds: 0
             periodSeconds: 30
             successThreshold: 1
