observes\feat(back): #3465.7 transform and upload
- added streamer dependency
- added transformer
- added loader


Former-commit-id: 8012f4b544196b693b01963cadaa8a63221111bd

--- a/observes/etl/dif_dynamo_etl/pyproject.toml
+++ b/observes/etl/dif_dynamo_etl/pyproject.toml
@@ -6,6 +6,7 @@ authors = ["Product Team <development@fluidattacks.com>"]
 
 [tool.poetry.dependencies]
 python = "3.8"
+streamer-dynamodb = {path = "../../singer/streamer_dynamodb"}
 
 [tool.poetry.dev-dependencies]
 pytest = "5.2"
