--- a/observes/etl/dif_dynamo_etl/pyproject.toml
+++ b/observes/etl/dif_dynamo_etl/pyproject.toml
@@ -5,7 +5,8 @@ description = ""
 authors = ["Product Team <development@fluidattacks.com>"]
 
 [tool.poetry.dependencies]
-python = "3.8"
+python = "3.8.5"
+boto3 = "1.12.32"
 streamer-dynamodb = {path = "../../singer/streamer_dynamodb"}
 
 [tool.poetry.dev-dependencies]
@@ -14,3 +15,6 @@ pytest = "5.2"
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.scripts]
+streamer-dynamodb = 'cli:main'
