--- a/integrates/deploy/ephemeral/deployment.yaml
+++ b/integrates/deploy/ephemeral/deployment.yaml
@@ -20,7 +20,12 @@ spec:
           image: registry.gitlab.com/fluidattacks/product/app:__DEPLOYMENT_NAME__
           imagePullPolicy: Always
           command: [bash]
-          args: [build.sh, integrates_serve_ephemeral]
+          args:
+            - build.sh
+            - integrates_serve_components
+            - dynamo
+            - redis
+            - http/development/fluidintegrates.asgi:APP/fluidintegrates.asgi.IntegratesWorker/5/0.0.0.0/8000/127.0.0.1
           resources:
             requests:
               cpu: 500m
@@ -38,7 +43,12 @@ spec:
             - containerPort: 8000
           readinessProbe:
             exec:
-              command: [bash, build.sh, integrates_probes_ephemeral_readiness]
+              command:
+                - bash
+                - build.sh
+                - integrates_probes_readiness
+                - integrates-dev
+                - http://localhost:8000
             initialDelaySeconds: 0
             periodSeconds: 30
             successThreshold: 1
@@ -46,7 +56,13 @@ spec:
             timeoutSeconds: 30
           livenessProbe:
             exec:
-              command: [bash, build.sh, integrates_probes_ephemeral_liveness]
+              command:
+                - bash
+                - build.sh
+                - integrates_probes_liveness
+                - integrates-dev
+                - http://localhost:8000
+                - https://__CI_COMMIT_REF_NAME__.integrates.fluidattacks.com
             initialDelaySeconds: 0
             periodSeconds: 30
             successThreshold: 1
@@ -56,7 +72,10 @@ spec:
           image: registry.gitlab.com/fluidattacks/product/app:__DEPLOYMENT_NAME__
           imagePullPolicy: Always
           command: [bash]
-          args: [build.sh, integrates2_serve_ephemeral]
+          args:
+            - build.sh
+            - integrates_serve_components
+            - http/development/backend_new.app:APP/uvicorn.workers.UvicornWorker/5/0.0.0.0/8001/*
           resources:
             requests:
               cpu: 500m
@@ -74,7 +93,12 @@ spec:
             - containerPort: 8001
           readinessProbe:
             exec:
-              command: [bash, build.sh, integrates2_probes_ephemeral_readiness]
+              command:
+                - bash
+                - build.sh
+                - integrates_probes_readiness
+                - integrates-dev
+                - http://localhost:8001/new/
             initialDelaySeconds: 0
             periodSeconds: 30
             successThreshold: 1
@@ -82,7 +106,13 @@ spec:
             timeoutSeconds: 30
           livenessProbe:
             exec:
-              command: [bash, build.sh, integrates2_probes_ephemeral_liveness]
+              command:
+                - bash
+                - build.sh
+                - integrates_probes_liveness
+                - integrates-dev
+                - http://localhost:8001/new/
+                - https://__CI_COMMIT_REF_NAME__.integrates.fluidattacks.com/new/
             initialDelaySeconds: 0
             periodSeconds: 30
             successThreshold: 1
