integrates\feat(back): #3621.7 generic prod probes
- Use generic probes for production
- Remove unused jobs and provisioners


Former-commit-id: 13c3e76ce656d76d41178c7e85e3c60a93ef6d74

--- a/integrates/deploy/production/deployment.yaml
+++ b/integrates/deploy/production/deployment.yaml
@@ -48,7 +48,12 @@ spec:
             - containerPort: 8000
           readinessProbe:
             exec:
-              command: [bash, build.sh, integrates_probes_production_readiness]
+              command:
+                - bash
+                - build.sh
+                - integrates_probes_readiness
+                - integrates-prod
+                - http://localhost:8000
             initialDelaySeconds: 0
             periodSeconds: 30
             successThreshold: 1
@@ -56,7 +61,13 @@ spec:
             timeoutSeconds: 30
           livenessProbe:
             exec:
-              command: [bash, build.sh, integrates_probes_production_liveness]
+              command:
+                - bash
+                - build.sh
+                - integrates_probes_liveness
+                - integrates-prod
+                - http://localhost:8000
+                - https://integrates.fluidattacks.com
             initialDelaySeconds: 0
             periodSeconds: 30
             successThreshold: 1
