--- a/integrates/deploy/production/deployment2.yaml
+++ b/integrates/deploy/production/deployment2.yaml
@@ -44,7 +44,12 @@ spec:
             - containerPort: 8000
           readinessProbe:
             exec:
-              command: [bash, build.sh, integrates2_probes_production_readiness]
+              command:
+                - bash
+                - build.sh
+                - integrates_probes_readiness
+                - integrates-prod
+                - http://localhost:8000/new/
             initialDelaySeconds: 0
             periodSeconds: 30
             successThreshold: 1
@@ -52,7 +57,13 @@ spec:
             timeoutSeconds: 30
           livenessProbe:
             exec:
-              command: [bash, build.sh, integrates2_probes_production_liveness]
+              command:
+                - bash
+                - build.sh
+                - integrates_probes_liveness
+                - integrates-prod
+                - http://localhost:8000/new/
+                - https://integrates.fluidattacks.com/new/
             initialDelaySeconds: 0
             periodSeconds: 30
             successThreshold: 1
