skims\fix(back): #3605.3 validate jwt with jose
Former-commit-id: 6f82183c20855621e9cc9e1f45fa46c44fc70a0e

--- a/skims/pyproject.toml
+++ b/skims/pyproject.toml
@@ -65,6 +65,7 @@ pillow = "7.2.0"
 pyparsing = "2.4.7"
 python = "^3.8"
 python-hcl2 = "0.3.0"
+python-jose = "3.2.0"
 requests = "2.24.0"
 "ruamel.yaml" = "0.16.10"
 semver = "2.10.2"
