integrates\feat(back): #3621.8 use components job in prod
- Use new job for deploying integrates 1 and 2 prod
- Remove old jobs and provisioners


Former-commit-id: 8adf97d50f8590dd9af188f3206f39feedaf20a9

--- a/integrates/deploy/production/deployment.yaml
+++ b/integrates/deploy/production/deployment.yaml
@@ -26,7 +26,10 @@ spec:
           image: registry.gitlab.com/fluidattacks/product/app:master
           imagePullPolicy: Always
           command: [bash]
-          args: [build.sh, integrates_serve_production]
+          args:
+            - build.sh
+            - job_integrates_serve_components
+            - http/production/fluidintegrates.asgi:APP/fluidintegrates.asgi.IntegratesWorker/5/0.0.0.0/8000/127.0.0.1
           resources:
             requests:
               cpu: 1500m
