--- a/integrates/deploy/production/deployment2.yaml
+++ b/integrates/deploy/production/deployment2.yaml
@@ -22,7 +22,10 @@ spec:
           image: registry.gitlab.com/fluidattacks/product/app:master
           imagePullPolicy: Always
           command: [bash]
-          args: [build.sh, integrates2_serve_production]
+          args:
+            - build.sh
+            - job_integrates_serve_components
+            - http/production/backend_new.app:APP/uvicorn.workers.UvicornWorker/5/0.0.0.0/8000/*
           resources:
             requests:
               cpu: 1500m
