integrates\fix(build): #3621.9 extra arg
- Add extra parameter to serve_components for aws login profile


Former-commit-id: 397933efcb96cd7a46363d9f761af383b0da728d

--- a/integrates/deploy/ephemeral/deployment.yaml
+++ b/integrates/deploy/ephemeral/deployment.yaml
@@ -23,6 +23,7 @@ spec:
           args:
             - build.sh
             - integrates_serve_components
+            - development
             - dynamo
             - http/development/fluidintegrates.asgi:APP/fluidintegrates.asgi.IntegratesWorker/5/0.0.0.0/8000/127.0.0.1
           resources:
@@ -74,6 +75,7 @@ spec:
           args:
             - build.sh
             - integrates_serve_components
+            - development
             - redis
             - http/development/backend_new.app:APP/uvicorn.workers.UvicornWorker/5/0.0.0.0/8001/*
           resources:
