--- a/integrates/deploy/production/deployment2.yaml
+++ b/integrates/deploy/production/deployment2.yaml
@@ -25,6 +25,7 @@ spec:
           args:
             - build.sh
             - job_integrates_serve_components
+            - production
             - http/production/backend_new.app:APP/uvicorn.workers.UvicornWorker/5/0.0.0.0/8000/*
           resources:
             requests:
