serves\refac(back): #3651.1 reduce autoscaling max builds
- Reduce from 20 to 15 jobs
- Increase idle machines for autoscaling large


Former-commit-id: 0d835996235219100fef790454f726fb9e5f5ba9

--- a/.gitlab/CODEOWNERS
+++ b/.gitlab/CODEOWNERS
@@ -2,8 +2,8 @@
 * @dsalazaratfluid @jrestrepoatfluid @kamadoatfluid @ralvarezatfluid
 
 # Front approvers
-/integrates/front/ @dacevedoatfluid @jrestrepoatfluid @kamadoatfluid @dsalazaratfluid
-/integrates/mobile/ @dacevedoatfluid @jrestrepoatfluid @kamadoatfluid
+/integrates/front/ @dacevedoatfluid @dsalazaratfluid @jrestrepoatfluid @kamadoatfluid
+/integrates/mobile/ @dacevedoatfluid @dsalazaratfluid @jrestrepoatfluid @kamadoatfluid
 
 # Integrates back authz approvers
 /integrates/django-apps/integrates-back-async/backend/authz/ @jrestrepoatfluid @kamadoatfluid
