observes\feat(job): #3631.8 ci linter and test
- added common linter provisioner
- use common linter
- added target redshift tests
- added jobs to ci
- removed common lint job


Former-commit-id: b9f02ef1ceebbebb85cd64108a2d38557a6389eb

--- a/observes/.gitlab-ci.yml
+++ b/observes/.gitlab-ci.yml
@@ -40,11 +40,6 @@
       when: never
     - if: *observes_commit_pattern
 
-observes_lint_code:
-  <<: *with_nix
-  <<: *observes_in_dev_branch
-  stage: lint-code
-
 observes_test_infra:
   <<: *with_nix
   <<: *observes_in_dev_branch
@@ -118,6 +113,16 @@ observes_gitlab_etl_lint:
   stage: lint-code
 
 observes_gitlab_etl_test:
+  <<: *with_nix
+  <<: *observes_in_dev_branch
+  stage: test-code
+
+observes_tredshift_lint:
+  <<: *with_nix
+  <<: *observes_in_dev_branch
+  stage: lint-code
+
+observes_tredshift_test:
   <<: *with_nix
   <<: *observes_in_dev_branch
   stage: test-code
