integrates\refac(cross): #3655.3 remove old worker groups
- Remove old worker groups as they're no longer being used
- Make dev selenium tests and build front use autoscaling-large


Former-commit-id: 1f3775bafc34facbfee6b17e1de9c5c83f1cdec0

--- a/integrates/.gitlab-ci.yml
+++ b/integrates/.gitlab-ci.yml
@@ -191,6 +191,7 @@ scheduler_send_unsolved_to_all:
 integrates_build_front:
   <<: *with_nix
   <<: *in_everywhere_except_periodic_jobs_and_mrs_integrates
+  tags: [autoscaling-large]
   stage: build
   retry: 1
   artifacts:
@@ -337,6 +338,7 @@ integrates_functional_tests_back:
 integrates_functional_tests_dev:
   <<: *with_nix
   <<: *in_dev_branch_integrates
+  tags: [autoscaling-large]
   image: "${CI_REGISTRY_IMAGE}/nix:integrates_functional_tests_dev"
   needs:
     - integrates_deploy_back_ephemeral
