observes\test(back): #3631.10 redshift factory
- added tests
- added dependencies
- added docstrings
- no-deltas-test


Former-commit-id: a92f79bdc44bb378a18f061f21b148df5f120a13

--- a/observes/singer/target_redshift_2/pyproject.toml
+++ b/observes/singer/target_redshift_2/pyproject.toml
@@ -10,6 +10,8 @@ psycopg2 = "2.8.6"
 
 [tool.poetry.dev-dependencies]
 pytest = "5.2"
+pylint = "2.6.0"
+mypy = "0.790"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
