--- a/integrates/.gitlab-ci.yml
+++ b/integrates/.gitlab-ci.yml
@@ -191,7 +191,7 @@ scheduler_send_unsolved_to_all:
 integrates_build_front:
   <<: *with_nix
   <<: *in_everywhere_except_periodic_jobs_and_mrs_integrates
-  tags: [autoscaling-large]
+  tags: [autoscaling-cpu]
   stage: build
   retry: 1
   artifacts:
@@ -320,7 +320,7 @@ integrates_deploy_permissions_matrix:
 integrates_build_container_app:
   <<: *with_nix
   <<: *in_everywhere_except_periodic_jobs_and_mrs_integrates
-  tags: [autoscaling-large]
+  tags: [autoscaling-cpu]
   stage: build
 
 integrates_deploy_front:
@@ -338,7 +338,7 @@ integrates_functional_tests_back:
 integrates_functional_tests_dev:
   <<: *with_nix
   <<: *in_dev_branch_integrates
-  tags: [autoscaling-large]
+  tags: [autoscaling-cpu]
   image: "${CI_REGISTRY_IMAGE}/nix:integrates_functional_tests_dev"
   needs:
     - integrates_deploy_back_ephemeral
