--- a/skims/pyproject.toml
+++ b/skims/pyproject.toml
@@ -64,6 +64,7 @@ oyaml = "0.9"
 pillow = "7.2.0"
 pyparsing = "2.4.7"
 python = "^3.8"
+python-dateutil = "2.8.1"
 python-hcl2 = "0.3.0"
 python-jose = "3.2.0"
 requests = "2.24.0"
