skims\feat(back): #3675.2 add parse java module
- Include function to load normal class declarations as per the
  parser EBNF


Former-commit-id: eda4d229a19bb443e51134241226d224ce50f352

--- a/skims/pyproject.toml
+++ b/skims/pyproject.toml
@@ -35,6 +35,7 @@ packages = [
   { include = "parse_cfn", from = "skims" },
   { include = "parse_common", from = "skims" },
   { include = "parse_hcl2", from = "skims" },
+  { include = "parse_java", from = "skims"},
   { include = "parse_java_properties", from = "skims"},
   { include = "parse_json", from = "skims" },
   { include = "serialization", from = "skims" },
