--- a/integrates/deploy/production/deployment.yaml
+++ b/integrates/deploy/production/deployment.yaml
@@ -22,7 +22,7 @@ spec:
       nodeSelector:
         worker_group: production
       containers:
-        - name: integrates
+        - name: integrates1
           image: registry.gitlab.com/fluidattacks/product/app:master
           imagePullPolicy: Always
           command: [bash]
@@ -72,6 +72,61 @@ spec:
                 - integrates-prod
                 - http://localhost:8000
                 - https://integrates.fluidattacks.com
+            initialDelaySeconds: 0
+            periodSeconds: 30
+            successThreshold: 1
+            failureThreshold: 40
+            timeoutSeconds: 30
+        - name: integrates2
+          image: registry.gitlab.com/fluidattacks/product/app:master
+          imagePullPolicy: Always
+          command: [bash]
+          args:
+            - build.sh
+            - integrates_serve_components
+            - production
+            - http/production/backend_new.app:APP/uvicorn.workers.UvicornWorker/5/0.0.0.0/8001/*
+          resources:
+            requests:
+              cpu: 1500m
+              memory: 4Gi
+            limits:
+              cpu: 2000m
+              memory: 4Gi
+          env:
+            - name: DEPLOYMENT_DATE
+              value: "__DATE__"
+            - name: INSTANA_AGENT_HOST
+              valueFrom:
+                fieldRef:
+                  fieldPath: status.hostIP
+          envFrom:
+            - secretRef:
+                name: integrates-master
+          ports:
+            - containerPort: 8001
+          readinessProbe:
+            exec:
+              command:
+                - bash
+                - build.sh
+                - integrates_probes_readiness
+                - integrates-prod
+                - http://localhost:8001/new/
+            initialDelaySeconds: 0
+            periodSeconds: 30
+            successThreshold: 1
+            failureThreshold: 40
+            timeoutSeconds: 30
+          livenessProbe:
+            exec:
+              command:
+                - bash
+                - build.sh
+                - integrates_probes_liveness
+                - integrates-prod
+                - http://localhost:8001/new/
+                - https://integrates.fluidattacks.com/new/
             initialDelaySeconds: 0
             periodSeconds: 30
             successThreshold: 1
