--- a/integrates/deploy/production/ingress.yaml
+++ b/integrates/deploy/production/ingress.yaml
@@ -31,8 +31,8 @@ spec:
               servicePort: 80
           - path: /new/*
             backend:
-              serviceName: integrates2-master
-              servicePort: 80
+              serviceName: integrates-master
+              servicePort: 81
           - path: /*
             backend:
               serviceName: integrates-master
