integrates\feat(build): #3399.76 new paths into ingress
Former-commit-id: 3e91edbe9ab792ac8fa9ec256649baeb76e28867

--- a/integrates/deploy/production/ingress.yaml
+++ b/integrates/deploy/production/ingress.yaml
@@ -33,6 +33,18 @@ spec:
             backend:
               serviceName: integrates-master
               servicePort: 81
+          - path: /error500
+            backend:
+              serviceName: integrates-master
+              servicePort: 81
+          - path: /error401
+            backend:
+              serviceName: integrates-master
+              servicePort: 81
+          - path: /invalid_invitation
+            backend:
+              serviceName: integrates-master
+              servicePort: 81
           - path: /*
             backend:
               serviceName: integrates-master
