integrates\perf(build): #3650.4 deploy back ephemeral
- Make deploy_back_ephemeral job use autoscaling-cpu
machines


Former-commit-id: 57c94cfc77f077bec1143c8205e3cf8985f35aab

--- a/integrates/.gitlab-ci.yml
+++ b/integrates/.gitlab-ci.yml
@@ -248,6 +248,7 @@ integrates_deploy_back_ephemeral_clean:
 integrates_deploy_back_ephemeral:
   <<: *with_nix
   <<: *in_dev_branch_integrates
+  tags: [autoscaling-cpu]
   stage: deploy-app
   needs: [integrates_build_container_app]
   retry: 1
