--- a/serves/services/autoscaling-ci/config.toml
+++ b/serves/services/autoscaling-ci/config.toml
@@ -53,7 +53,7 @@ check_interval = 20
       "amazonec2-use-ebs-optimized-instance=true",
       "amazonec2-security-group=AutoscalingCISG",
       "amazonec2-ami=ami-013da1cc4ae87618c",
-      "amazonec2-instance-type=t3a.medium",
+      "amazonec2-instance-type=c5a.large",
       "amazonec2-volume-type=gp2",
       "amazonec2-root-size=35"
     ]
@@ -236,7 +236,7 @@ check_interval = 20
       "amazonec2-use-ebs-optimized-instance=true",
       "amazonec2-security-group=AutoscalingCISG",
       "amazonec2-ami=ami-013da1cc4ae87618c",
-      "amazonec2-instance-type=t3a.medium",
+      "amazonec2-instance-type=c5a.large",
       "amazonec2-volume-type=gp2",
       "amazonec2-root-size=100"
     ]
@@ -271,7 +271,7 @@ check_interval = 20
       BucketName = "autonomic-ci-cache"
       BucketLocation = "us-east-1"
   [runners.machine]
-    IdleCount = 10
+    IdleCount = 5
     IdleTime = 1800
     MaxBuilds = 15
     MachineDriver = "amazonec2"
@@ -290,7 +290,7 @@ check_interval = 20
       "amazonec2-use-ebs-optimized-instance=true",
       "amazonec2-security-group=AutoscalingCISG",
       "amazonec2-ami=ami-013da1cc4ae87618c",
-      "amazonec2-instance-type=t3a.medium",
+      "amazonec2-instance-type=c5a.large",
       "amazonec2-volume-type=gp2",
       "amazonec2-root-size=35"
     ]
