skims\fix(conf): #3692.2 typo in config
- glog is a file, glob is the glob function


Former-commit-id: e9cb39f17522b4796f11936bbff541783b8fe958

--- a/skims/test/data/config/massive.yaml
+++ b/skims/test/data/config/massive.yaml
@@ -16,3 +16,10 @@ path:
     - glob(**/modernizr.js)
     - glob(**/UI/AutocompleteGenerico)
     - glob(**/UI/Tabs)
+    - glob(**/.vscode)
+    - glob(**/.idea)
+    - glob(**/*.pydevproject)
+    - glob(**/*.swp)
+    - glob(**/*.launch)
+    - glob(**/.cproject)
+    - glob(**/.buildpath)
