integrates\feat(build): #3534.2 enable minio
- Enable minio for local and ephemeral.
- Delete helper_set_local_dynamo_and_redis and
change for individual helpers.


Former-commit-id: 3f843bfb1023ec19c9953875b5fbb68e746bd49c

--- a/integrates/deploy/ephemeral/deployment.yaml
+++ b/integrates/deploy/ephemeral/deployment.yaml
@@ -76,6 +76,7 @@ spec:
             - integrates_serve_components
             - development
             - http/development/backend_new.app:APP/uvicorn.workers.UvicornWorker/3/0.0.0.0/8001/*
+            - minio
           resources:
             requests:
               cpu: 900m
