serves\refac(build): #3650.10 specific mountpoint
- use docker specific mountpoint as instance initialization
fails when mounting on /var due to lost OS files
- Use absolute paths in config


Former-commit-id: 43008a5157fe1aad6b1b5744eb20a261cf495cc9

--- a/serves/services/autoscaling-ci/config.toml
+++ b/serves/services/autoscaling-ci/config.toml
@@ -54,7 +54,7 @@ check_interval = 20
       "amazonec2-security-group=AutoscalingCISG",
       "amazonec2-ami=ami-013da1cc4ae87618c",
       "amazonec2-instance-type=c5d.large",
-      "amazonec2-userdata=./init.sh",
+      "amazonec2-userdata=/etc/gitlab-runner/init.sh",
       "amazonec2-volume-type=gp2",
       "amazonec2-root-size=35"
     ]
@@ -177,7 +177,7 @@ check_interval = 20
       "amazonec2-security-group=AutoscalingCISG",
       "amazonec2-ami=ami-013da1cc4ae87618c",
       "amazonec2-instance-type=c5d.large",
-      "amazonec2-userdata=./init.sh",
+      "amazonec2-userdata=/etc/gitlab-runner/init.sh",
       "amazonec2-volume-type=gp2",
       "amazonec2-root-size=100"
     ]
@@ -232,7 +232,7 @@ check_interval = 20
       "amazonec2-security-group=AutoscalingCISG",
       "amazonec2-ami=ami-013da1cc4ae87618c",
       "amazonec2-instance-type=c5d.large",
-      "amazonec2-userdata=./init.sh",
+      "amazonec2-userdata=/etc/gitlab-runner/init.sh",
       "amazonec2-volume-type=gp2",
       "amazonec2-root-size=35"
     ]
