--- a/skims/pyproject.toml
+++ b/skims/pyproject.toml
@@ -57,9 +57,9 @@ cfn-flip = "1.2.3"
 click = "7.1.2"
 confuse = "1.3.0"
 frozendict = "1.2"
+# graphviz = overridenPyPkgPyGraphviz
 jmespath = "0.10.0"
 lark-parser = "0.7.8"
-lxml = "4.6.1"
 metaloaders = "20.9.2566091"
 more-itertools = "8.4.0"
 networkx = "2.5"
