skims\test(back): #3675.12 outputs folder and svgs
- Move auto-generated files to the test/outputs folder
- Centralizing them is good so we dont get out of order
- Generate the SVGs automatically for the tests, they
  are in the outputs folder of course


Former-commit-id: 0ad1610c341194b75037ae74029fa747c622804a

--- a/skims/test/data/config/owasp_benchmark.yaml
+++ b/skims/test/data/config/owasp_benchmark.yaml
@@ -1,6 +1,6 @@
 chdir: ../../owasp_benchmark/src/main/java/org/owasp/benchmark/testcode
 language: EN
-output: results.csv
+output: test/outputs/results.csv
 path:
   include:
     # Crypto category
