skims\refac(back): #3675.16 organize code
- parse_antlr will have the generic AST graph generation which
  is common to C#, Java and Scala (availble ANTLR grammars)
- parse_java will have modifications to that graph in order
  to underestand the java language only


Former-commit-id: b38582190601a8f4904bc518e4919a35dd4c8943

--- a/skims/test/data/config/owasp_benchmark.yaml
+++ b/skims/test/data/config/owasp_benchmark.yaml
@@ -494,12 +494,12 @@ path:
     # - BenchmarkTest00018.java
     # - BenchmarkTest00024.java
     # - BenchmarkTest00025.java
-    # - BenchmarkTest00026.java
+    # - BenchmarkTest00026.java # 5
     # - BenchmarkTest00027.java
     # - BenchmarkTest00032.java
     # - BenchmarkTest00033.java
     # - BenchmarkTest00034.java
-    # - BenchmarkTest00037.java
+    # - BenchmarkTest00037.java # 10
     # - BenchmarkTest00038.java
     # - BenchmarkTest00039.java
     # - BenchmarkTest00043.java
