serves\feat(infra): #3687.1 create sorts iam users
- Create development and production users for Sorts, with the
  required permissions to manage Terraform executions.


Former-commit-id: 2aae848811a03322220a72c88f4091a2208f8287

--- a/serves/.gitlab-ci.yml
+++ b/serves/.gitlab-ci.yml
@@ -100,6 +100,11 @@ serves_test_user_provision_skims:
   <<: *serves_in_dev_branch
   stage: test-infra
 
+serves_test_user_provision_sorts:
+  <<: *with_nix
+  <<: *serves_in_dev_branch
+  stage: test-infra
+
 serves_test_user_provision_airs:
   <<: *with_nix
   <<: *serves_in_dev_branch
@@ -175,6 +180,11 @@ serves_apply_user_provision_integrates:
   stage: deploy-infra
 
 serves_apply_user_provision_skims:
+  <<: *with_nix
+  <<: *serves_in_master_branch
+  stage: deploy-infra
+
+serves_apply_user_provision_sorts:
   <<: *with_nix
   <<: *serves_in_master_branch
   stage: deploy-infra
