serves\feat(infra): #3687.2 set key rotation sorts users
- Add job that rotates the Sorts IAM users keys.
- Change resources name so they comply with the rotation template.


Former-commit-id: 09d6cf19483f6a73e149108468396c9ab63b4e00

--- a/serves/.gitlab-ci.yml
+++ b/serves/.gitlab-ci.yml
@@ -248,3 +248,8 @@ serves_rotate_keys_user_provision_skims:
   <<: *with_nix
   <<: *serves_in_schedule_rotate_keys_user_provision
   stage: rotation
+
+serves_rotate_keys_user_provision_sorts:
+  <<: *with_nix
+  <<: *serves_in_schedule_rotate_keys_user_provision
+  stage: rotation
