integrates\feat(cross): #3399.88 redirect to starlette
- Login, app, and some small views


Former-commit-id: ce51aa3ea196bf4ea468ae9832d13fef017838d3

--- a/integrates/deploy/ephemeral/ingress.yaml
+++ b/integrates/deploy/ephemeral/ingress.yaml
@@ -25,11 +25,7 @@ spec:
             backend:
               serviceName: ssl-redirect
               servicePort: use-annotation
-          - path: /new/orgs/*
-            backend:
-              serviceName: integrates-__DEPLOYMENT_NAME__
-              servicePort: 80
-          - path: /new/*
+          - path: /error401
             backend:
               serviceName: integrates-__DEPLOYMENT_NAME__
               servicePort: 81
@@ -37,11 +33,15 @@ spec:
             backend:
               serviceName: integrates-__DEPLOYMENT_NAME__
               servicePort: 81
-          - path: /error401
+          - path: /invalid_invitation
             backend:
               serviceName: integrates-__DEPLOYMENT_NAME__
               servicePort: 81
-          - path: /invalid_invitation
+          - path: /new/*
+            backend:
+              serviceName: integrates-__DEPLOYMENT_NAME__
+              servicePort: 81
+          - path: /static/*
             backend:
               serviceName: integrates-__DEPLOYMENT_NAME__
               servicePort: 81
