sorts\feat(infra): #3687.4 create s3 bucket
Former-commit-id: d0fc928a7d39a92b6c9498147f04149896c5830c

--- a/sorts/.gitlab-ci.yml
+++ b/sorts/.gitlab-ci.yml
@@ -44,15 +44,25 @@
       when: never
     - if: *sorts_commit_pattern
 
-sorts_lint:
+sorts_lint_code:
   <<: *with_nix
   <<: *sorts_in_dev_branch
   stage: lint-code
 
-sorts_test:
+sorts_test_code:
   <<: *with_nix
   <<: *sorts_in_dev_branch
   stage: test-code
+
+sorts_test_infra:
+  <<: *with_nix
+  <<: *sorts_in_dev_branch
+  stage: test-infra
+
+sorts_deploy_infra:
+  <<: *with_nix
+  <<: *sorts_in_master_branch
+  stage: deploy-infra
 
 sorts_deploy_to_pypi:
   <<: *with_nix
