sorts\feat(build): #3687.6 deploy to pypi when useful
- Following MRs will not change any code in the tool, so it is not
  necessary to deploy a new version to PyPI every time, especially
  since the tool asks you to download the latest version.
- Only deploy when code that affects the tool is changed.


Former-commit-id: 8269cbc04663b8c5ce5f5043538d39d75a0684f1

--- a/sorts/.gitlab-ci.yml
+++ b/sorts/.gitlab-ci.yml
@@ -44,6 +44,22 @@
       when: never
     - if: *sorts_commit_pattern
 
+.sorts_in_master_branch_code_changes: &sorts_in_master_branch_code_changes
+  rules:
+    - if: '$CI_COMMIT_BRANCH != "master"'
+      when: never
+    - if: '$CI_PIPELINE_SOURCE == "schedule"'
+      when: never
+    - if: '$CI_PIPELINE_SOURCE == "trigger"'
+      when: never
+    - if: '$CI_PIPELINE_SOURCE == "merge_request_event"'
+      when: never
+    - if: *sorts_commit_pattern
+      changes:
+        - "sorts/pyproject.toml"
+        - "sorts/static/*"
+        - "sorts/sorts/**/*"
+
 sorts_lint_code:
   <<: *with_nix
   <<: *sorts_in_dev_branch
@@ -66,5 +82,5 @@ sorts_deploy_infra:
 
 sorts_deploy_to_pypi:
   <<: *with_nix
-  <<: *sorts_in_master_branch
+  <<: *sorts_in_master_branch_code_changes
   stage: deploy-app
